--- a/cadastro.html
+++ b/cadastro.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <title>encomendas de bolo e pao</title>
+  <link rel="stylesheet" href="
 </head>
-<body bgcolor="lightblue">
+<body
+
+bgcolor="lightblue">
   <img src="Green Playful Tour and Travel Promo Billboard Web Ad.jpg" height="400px" width="100%">
   <h1>padaria do PH</h1>
  <div class="form-container">
