--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
+
 </head>
-<body bgcolor="lightblue">
+<body>
   <img src="Green Playful Tour and Travel Promo Billboard Web Ad.jpg" height="400px" width="100%">
   <h1>padaria do PH</h1>
+  <div class="form-container"></div>
+  <a href="cadastro.html">cadastre-se</a>
   <h2>pão árabe</h2>
   <h2>ingredientes:</h2>
   <ul>
