--- a/cadastro.html
+++ b/cadastro.html
@@ -2,19 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>encomendas de bolo e pao</title>
-  <link rel="stylesheet" href="
+  <link rel="stylesheet" href="cadastro.css">
 </head>
-<body
+<body>
 
-bgcolor="lightblue">
-  <img src="Green Playful Tour and Travel Promo Billboard Web Ad.jpg" height="400px" width="100%">
+
+
   <h1>padaria do PH</h1>
  <div class="form-container">
   <h2>Faça sua Encomenda</h2>
-  <form action="#" method="post">
+  <form action="https://formspree.io/f/xyzjgwpj" method="post">
 
     <!-- Dados do Cliente -->
     <label for="nome">Nome:</label>
